--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "spectacular-perspective-theme",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:tailwind": "npx tailwindcss -i ./css/tailwind.css -o ./assets/application.css --watch"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "tailwindcss": "^3.4.4"
-  }
+	"name": "spectacular-perspective-theme",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"watch:tailwind": "npx tailwindcss -i ./css/tailwind.css -o ./assets/application.css --watch",
+		"prettier": "prettier"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@shopify/prettier-plugin-liquid": "^1.5.0",
+		"prettier": "^3.3.2",
+		"tailwindcss": "^3.4.4"
+	}
 }
