--- a/.prettierrc
+++ b/.prettierrc
@@ -2,11 +2,10 @@
     "plugins": ["@shopify/prettier-plugin-liquid"],
     "printWidth": 80,
     "tabWidth": 4,
-    "useTabs": false,
-    "semi": true,
+    "useTabs": true,
+  
     "singleQuote": true,
     "trailingComma": "none",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false,
+
     "arrowParens": "avoid"
   }
